--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">2,1 миллиарда</h4>
             <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text_source">Всемирный Банк, 2017</p>
+            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">1000 терабайт</h4>
@@ -55,7 +55,7 @@
           <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">420 миллионов</h4>
             <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text_source">Всемирный Банк, 2017</p>
+            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell table__cell_theme_light">
             <h4 class="table__heading table__heading_theme_light">17–20 лет</h4>
@@ -73,6 +73,9 @@
       </section>
 
       <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
