--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img src="/images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &#8594;</a>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <img src="/images/header-image.png" alt="Фрагмент картины Снова двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
@@ -75,7 +75,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
@@ -127,7 +127,45 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="/images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+          <p class="footer__author">&copy 2019. Виктор Абанькин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h4 class="footer__column-heading">О Практикуме</h4>
+          <ul class="footer__column-links">
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link_item">Главная</a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link_item">Концепция</a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link_item">Наставники</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <ul class="footer__column-links">
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link_item">
+                <img src="/images/facebook_color_white.svg" alt="" class="footer__social-icon">Facebook
+              </a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link_item">
+                <img src="/images/vk_color_white.svg" alt="" class="footer__social-icon">Вконтакте
+              </a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link_item">
+                <img src="/images/instagram_color_white.svg" alt="" class="footer__social-icon">Instagram</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
