--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="/styles/normalize.css">
   <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
@@ -151,17 +152,17 @@
           <ul class="footer__column-links">
             <li class="footer__column-link">
               <a href="#" class="footer__column-link_item">
-                <img src="/images/facebook_color_white.svg" alt="" class="footer__social-icon">Facebook
+                <img src="/images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">Facebook
               </a>
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link_item">
-                <img src="/images/vk_color_white.svg" alt="" class="footer__social-icon">Вконтакте
+                <img src="/images/vk_color_white.svg" alt="Иконка Вконтакте" class="footer__social-icon">Вконтакте
               </a>
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link_item">
-                <img src="/images/instagram_color_white.svg" alt="" class="footer__social-icon">Instagram</a>
+                <img src="/images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">Instagram</a>
             </li>
           </ul>
         </div>
