change style path

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <img src="/images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
-      <img src="/images/header-image.png" alt="Фрагмент картины Снова двойка" class="header__main-illustration">
+      <img src="./images/header-image.png" alt="Фрагмент картины Снова двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -124,13 +124,13 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="/images/kaufman-triangle.svg" alt="Декоративный элемент треугольник"/>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Декоративный элемент треугольник"/>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="/images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
           <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
@@ -152,17 +152,17 @@
           <ul class="footer__column-links">
             <li class="footer__column-link">
               <a href="#" class="footer__column-link_item">
-                <img src="/images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">Facebook
+                <img src="./images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">Facebook
               </a>
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link_item">
-                <img src="/images/vk_color_white.svg" alt="Иконка Вконтакте" class="footer__social-icon">Вконтакте
+                <img src="./images/vk_color_white.svg" alt="Иконка Вконтакте" class="footer__social-icon">Вконтакте
               </a>
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link_item">
-                <img src="/images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">Instagram</a>
+                <img src="./images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">Instagram</a>
             </li>
           </ul>
         </div>
