--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo__place_header">
+      <img src="./images/logo_place_header.svg" alt="Логотип Яндекс.Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
@@ -19,7 +19,7 @@
     </header>
     <main class="content">
       <section class="description">
-       <div class="two-columns">
+       <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -29,59 +29,59 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="digits">
-        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
-        <ul class="table table_theme_light">
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">86 миллиардов</h4>
-            <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">2,1 миллиарда</h4>
-            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h4 class="table__heading">2,1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">1000 терабайт</h4>
-            <p class="table__text table__text_theme_light">Объём памяти человека</p>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">500 триллионов</h4>
-            <p class="table__text table__text_theme_light">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">420 миллионов</h4>
-            <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_theme_light">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">17–20 лет</h4>
-            <p class="table__text table__text_theme_light">Пик обучаемости</p>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">1885 год</h4>
-            <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+          <li class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h4 class="table__heading table__heading_theme_light">1889 год</h4>
-            <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+          <li class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -124,44 +124,46 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Декоративный элемент треугольник"/>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Логотип Яндекс.Практикум в подвале сайта" class="logo logo_place_footer">
           <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
-          <ul class="footer__column-links">
-            <li class="footer__column-link">
-              <a href="#" class="footer__column-link_item">Главная</a>
-            </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__column-link_item">Концепция</a>
-            </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__column-link_item">Наставники</a>
-            </li>
-          </ul>
+          <nav>
+            <ul class="footer__column-links">
+              <li>
+                <a href="#" class="footer__column-link">Главная</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link">Концепция</a>
+              </li>
+              <li>
+                <a href="#" class="footer__column-link">Наставники</a>
+              </li>
+            </ul>
+          </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
-            <li class="footer__column-link">
-              <a href="#" class="footer__column-link_item">
+            <li>
+              <a href="#" class="footer__column-link">
                 <img src="./images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">Facebook
               </a>
             </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__column-link_item">
+            <li>
+              <a href="#" class="footer__column-link">
                 <img src="./images/vk_color_white.svg" alt="Иконка Вконтакте" class="footer__social-icon">Вконтакте
               </a>
             </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__column-link_item">
+            <li>
+              <a href="#" class="footer__column-link">
                 <img src="./images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">Instagram</a>
             </li>
           </ul>
