--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип Яндекс.Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link">Узнать &rarr;</a>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link header__link">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" alt="Фрагмент картины Снова двойка" class="header__main-illustration">
       <div class="header__square-pic"></div>
@@ -75,7 +75,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="link feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
@@ -137,13 +137,13 @@
           <nav>
             <ul class="footer__column-links">
               <li>
-                <a href="#" class="footer__column-link">Главная</a>
+                <a href="#" class="link footer__column-link">Главная</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">Концепция</a>
+                <a href="#" class="link footer__column-link">Концепция</a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">Наставники</a>
+                <a href="#" class="link footer__column-link">Наставники</a>
               </li>
             </ul>
           </nav>
@@ -152,17 +152,17 @@
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
             <li>
-              <a href="#" class="footer__column-link">
+              <a href="#" class="link footer__column-link">
                 <img src="./images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">Facebook
               </a>
             </li>
             <li>
-              <a href="#" class="footer__column-link">
+              <a href="#" class="link footer__column-link">
                 <img src="./images/vk_color_white.svg" alt="Иконка Вконтакте" class="footer__social-icon">Вконтакте
               </a>
             </li>
             <li>
-              <a href="#" class="footer__column-link">
+              <a href="#" class="link footer__column-link">
                 <img src="./images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">Instagram</a>
             </li>
           </ul>
