--- a/index.html
+++ b/index.html
@@ -194,6 +194,33 @@
         </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo">
+            <a href="#" class="resources__logo-link link">
+              <img src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas" class="resources__logo-img">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="#" class="resources__logo-link link">
+              <img src="./images/logo/resources-n1.svg" alt="Логотип N1" class="resources__logo-img">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="#" class="resources__logo-link link">
+              <img src="./images/logo/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo-img">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a href="#" class="resources__logo-link link">
+              <img src="./images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__logo-img">
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
