--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img src="/images/cards-attention.png" alt="Книга в руках" class="cards__image">
+            <img src="./images/cards-attention.png" alt="Книга в руках" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-recall.png" alt="Фотография статуи" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Фотография статуи" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-interliving.png" alt="Нью-Йоркское метро" class="cards__image">
+            <img src="./images/cards-interliving.png" alt="Нью-Йоркское метро" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-question.png" alt="Пустое помещение с множеством окон" class="cards__image">
+            <img src="./images/cards-question.png" alt="Пустое помещение с множеством окон" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-competence.png" alt="Много книг лежит в руке" class="cards__image">
+            <img src="./images/cards-competence.png" alt="Много книг лежит в руке" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -67,8 +67,8 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" class="video__iframe"></iframe>
-          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
+          <iframe src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__iframe"></iframe>
         </div>
       </section>
 
@@ -141,7 +141,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="/images/khan-book.jpg" alt="Книга весь мир школа" class="khan__book-pic">
+            <img src="./images/khan-book.jpg" alt="Книга весь мир школа" class="khan__book-pic">
             <a href="" class="link khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </article>
