--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img src="./images/logo_place_header.svg" alt="Логотип Яндекс.Практикум" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link header__link">Узнать &rarr;</a>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="link header__link" target="_blank">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png" alt="Фрагмент картины Снова двойка" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
@@ -87,7 +87,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="link feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="link feynman__link" target="_blank">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -142,7 +142,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Книга весь мир школа" class="khan__book-pic">
-            <a href="" class="link khan__buy-link">Купить книгу &rarr;</a>
+            <a href="" class="link khan__buy-link" target="_blank">Купить книгу &rarr;</a>
           </div>
         </article>
       </section>
@@ -200,22 +200,22 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li class="resources__logo">
-            <a href="#" class="resources__logo-link link">
+            <a href="#" class="resources__logo-link link" target="_blank">
               <img src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas" class="resources__logo-img">
             </a>
           </li>
           <li class="resources__logo">
-            <a href="#" class="resources__logo-link link">
+            <a href="#" class="resources__logo-link link" target="_blank">
               <img src="./images/logo/resources-n1.svg" alt="Логотип N1" class="resources__logo-img">
             </a>
           </li>
           <li class="resources__logo">
-            <a href="#" class="resources__logo-link link">
+            <a href="#" class="resources__logo-link link" target="_blank">
               <img src="./images/logo/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo-img">
             </a>
           </li>
           <li class="resources__logo">
-            <a href="#" class="resources__logo-link link">
+            <a href="#" class="resources__logo-link link" target="_blank">
               <img src="./images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__logo-img">
             </a>
           </li>
@@ -233,13 +233,13 @@
           <nav>
             <ul class="footer__column-links">
               <li>
-                <a href="#" class="link footer__column-link">Главная</a>
+                <a href="#" class="link footer__column-link" target="_blank">Главная</a>
               </li>
               <li>
-                <a href="#" class="link footer__column-link">Концепция</a>
+                <a href="#" class="link footer__column-link" target="_blank">Концепция</a>
               </li>
               <li>
-                <a href="#" class="link footer__column-link">Наставники</a>
+                <a href="#" class="link footer__column-link" target="_blank">Наставники</a>
               </li>
             </ul>
           </nav>
@@ -248,17 +248,17 @@
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
             <li>
-              <a href="#" class="link footer__column-link">
+              <a href="#" class="link footer__column-link" target="_blank">
                 <img src="./images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">Facebook
               </a>
             </li>
             <li>
-              <a href="#" class="link footer__column-link">
+              <a href="#" class="link footer__column-link" target="_blank">
                 <img src="./images/vk_color_white.svg" alt="Иконка Вконтакте" class="footer__social-icon">Вконтакте
               </a>
             </li>
             <li>
-              <a href="#" class="link footer__column-link">
+              <a href="#" class="link footer__column-link" target="_blank">
                 <img src="./images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">Instagram</a>
             </li>
           </ul>
